.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Type_Event__c.object
<CustomObject>
    <fields>
        <fullName>Incap311__Activity_Outcome_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Outcome Response</label>
        <referenceTo>Incap311__Activity_Outcome_Response__c</referenceTo>
        <relationshipLabel>Service Type Event</relationshipLabel>
        <relationshipName>Service_Type_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Outcome__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Outcome</label>
        <referenceTo>Incap311__Activity_Outcome__c</referenceTo>
        <relationshipLabel>Service Type Event</relationshipLabel>
        <relationshipName>Service_Type_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Flex_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flex Question</label>
        <referenceTo>Incap311__Question__c</referenceTo>
        <relationshipLabel>Service Type Event</relationshipLabel>
        <relationshipName>Service_Type_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outcome Question</label>
        <referenceTo>Incap311__Outcome_Question__c</referenceTo>
        <relationshipLabel>Service Type Event</relationshipLabel>
        <relationshipName>Service_Type_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Category</label>
        <referenceTo>Incap311__Service_Category__c</referenceTo>
        <relationshipLabel>Service Type Event</relationshipLabel>
        <relationshipName>Service_Type_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Department</label>
        <referenceTo>Incap311__Service_Department__c</referenceTo>
        <relationshipLabel>Service Type Event</relationshipLabel>
        <relationshipName>Service_Type_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Name__c</fullName>
        <formula>Incap311__Service_Type__r.Incap311__Service_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Code__c</fullName>
        <formula>Incap311__Service_Type__r.Incap311__Service_Type_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Version_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Type Version Activity</label>
        <referenceTo>Incap311__Service_Type_Version_Activity__c</referenceTo>
        <relationshipLabel>Service Type Event</relationshipLabel>
        <relationshipName>Service_Type_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Version_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Type Version Question</label>
        <referenceTo>Incap311__Service_Type_Version_Question__c</referenceTo>
        <relationshipLabel>Service Type Event</relationshipLabel>
        <relationshipName>Service_Type_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Type Version</label>
        <referenceTo>Incap311__Service_Type_Version__c</referenceTo>
        <relationshipLabel>Service Type Event</relationshipLabel>
        <relationshipName>Service_Type_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type__c</fullName>
        <label>Service Type</label>
        <referenceTo>Incap311__Service_Type__c</referenceTo>
        <relationshipLabel>Service Type Event</relationshipLabel>
        <relationshipName>Service_Type_Event</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Sub_Event__c</fullName>
        <label>Sub-Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activity Outcomes</fullName>
                </value>
                <value>
                    <fullName>Flex Questions</fullName>
                </value>
                <value>
                    <fullName>Outcome Questions</fullName>
                </value>
                <value>
                    <fullName>Outcome Responses</fullName>
                </value>
                <value>
                    <fullName>Reallocation Queues</fullName>
                </value>
                <value>
                    <fullName>Service Categories</fullName>
                </value>
                <value>
                    <fullName>Service Departments</fullName>
                </value>
                <value>
                    <fullName>Service Type</fullName>
                </value>
                <value>
                    <fullName>Service Type Version</fullName>
                </value>
                <value>
                    <fullName>Service Type Version Activities</fullName>
                </value>
                <value>
                    <fullName>Service Type Version Questions</fullName>
                </value>
                <value>
                    <fullName>Transfer Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Transfer_Service_Request_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Service Request Type</label>
        <referenceTo>Incap311__Transfer_Service_Request_Type__c</referenceTo>
        <relationshipLabel>Service Type Event</relationshipLabel>
        <relationshipName>Service_Type_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Type Event</label>
    <nameField>
        <displayFormat>STE-{00000000}</displayFormat>
        <label>Service Type Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Type Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>